# bin-unbin

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: codeql-analyze.yml
assets/: LICENSE.txt  Package-Description.txt  rpm-CHANGELOG.txt
man/: binme.1  unbinme.1
man-src/: binme.1.md  unbinme.1.md
src/: binme.cpp  unbinme.cpp
src/table_maker/: CMakeLists.txt  table_maker.cpp  table_maker.hpp
